--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "bit-buffer": "^0.2.5",
+    "datastructures-js": "^12.0.0",
     "fs": "^0.0.1-security",
     "lodash": "^4.17.21",
     "mnemonist": "^0.39.5",
